log
Sun, Mar 23, 2025 10:47:12 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:7: error: expected expression before 'int'
       int* numero = (int*) malloc(sizeof(int));
       ^~~
exercises.c:46:4: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
    for(int i = 0; i<10 ;i++)
    ^~~
exercises.c:48:7: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
       pushback(L, numero);
       ^~~~~~~~
exercises.c:48:7: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
exercises.c:48:19: error: 'numero' undeclared (first use in this function)
       pushback(L, numero);
                   ^~~~~~
exercises.c:48:19: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
0a59142
Sun, Mar 23, 2025 10:48:32 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:7: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
       pushback(L, numero);
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d90e56c
Sun, Mar 23, 2025 10:49:21 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:7: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
       pushback(L, numero);
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2f969b8
Sun, Mar 23, 2025 10:54:33 PM: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
644622e
Sun, Mar 23, 2025 10:59:15 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
8e02599
Sun, Mar 23, 2025 11:01:21 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
fe80575
Sun, Mar 23, 2025 11:02:31 PM: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|3
total_score: 30/70
27ae4ee
Sun, Mar 23, 2025 11:03:44 PM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
fede500
Sun, Mar 23, 2025 11:08:31 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
0e09605
Sun, Mar 23, 2025 11:12:09 PM: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:120:30: error: 'caracter' undeclared (first use in this function)
       if(cadena[i] == '(' || caracter == '{' || caracter == '['){
                              ^~~~~~~~
exercises.c:120:30: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:132:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
503ea74
Sun, Mar 23, 2025 11:13:48 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ffee84f
Sun, Mar 23, 2025 11:14:45 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 60/70
6ae5283
Sun, Mar 23, 2025 11:18:34 PM: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:6:0:
arraylist.c: In function 'create_list':
arraylist.c:15:34: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
   List* L = (List*)malloc(sizeof(List));
                                  ^~~~
arraylist.c:16:4: error: dereferencing pointer to incomplete type 'List {aka struct List}'
   L->current = 0;
    ^~
test.c: In function 'parentesisBalanceados':
test.c:253:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
 }
 ^
test.c:271:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
In file included from test.c:6:0:
arraylist.c: In function 'first':
arraylist.c:27:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:253:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:37:6: error: 'info_msg' defined but not used [-Werror=unused-function]
 void info_msg(char* msg){
      ^~~~~~~~
In file included from test.c:6:0:
arraylist.c:102:5: error: 'get_size' defined but not used [-Werror=unused-function]
 int get_size(List *L) {
     ^~~~~~~~
arraylist.c:89:7: error: 'popCurrent' defined but not used [-Werror=unused-function]
 void* popCurrent(List *L) {
       ^~~~~~~~~~
arraylist.c:80:7: error: 'popBack' defined but not used [-Werror=unused-function]
 void* popBack(List *L) {
       ^~~~~~~
arraylist.c:68:7: error: 'popFront' defined but not used [-Werror=unused-function]
 void* popFront(List *L) {
       ^~~~~~~~
arraylist.c:55:6: error: 'pushCurrent' defined but not used [-Werror=unused-function]
 void pushCurrent(List *L, void *dato) {
      ^~~~~~~~~~~
arraylist.c:37:6: error: 'pushFront' defined but not used [-Werror=unused-function]
 void pushFront(List *L, void *dato) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2c0b27b
